<resources>
    <string name="app_name">DunavPrevoz Redvoznje</string>
    <string name="MP">Putujem Od:</string>
    <string name="MD">Putujem Do:</string>

    <string name="pretrazi">Pretrazi</string>


    <string name="title_activity_show_result">ShowResult</string>
    <string name="rsn">RSN</string>
    <string name="mesto_polaska">TextView</string>
    <string name="mesto_dolaska">TextView</string>
    <string name="notifikacijaText">Notifikacija</string>
    <string name="vreme_polaska">TextView</string>
    <string name="vreme_dolaska">TextView</string>
    <string name="vreme_dolaska_pre">TextView</string>
    <string name="vreme_odlaska_pre">TextView</string>
    <string name="ceo">Ceo red voznje</string>
    <string name="naredni">Naredni autobusi</string>


    <string-array name="notifikacije">
        <item>Iskljucena</item>
        <item>15 min</item>
        <item>30 min</item>
        <item>45 min</item>
        <item>Izaberi proizvoljno</item>
    </string-array>

    <string name="opcije">Izaberi opciju</string>
</resources>
